correction card delivery on mobile

--- a/app/assets/stylesheets/pages/_farm.scss
+++ b/app/assets/stylesheets/pages/_farm.scss
@@ -353,6 +353,13 @@
     }
   }
 
+  .farm-delivery {
+    .delivery_option {
+      margin-left: 10px !important;
+      margin-right: 10px !important;
+    }
+  }
+
   .owl-stage {
     left: 0px;
   }
